# docroot

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  README.md  Taskfile.yml  contract.md  package.json
.devcontainer/: devcontainer.json  init.bash
.github/workflows/: backend-future.yml  ci.yml  images-future.yml  release.yml
TODO/: 03-route-docstring-separator.md  04-api-error-and-token-provider.md  05-frontend-types.md  06-auth-navigation-guards.md
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/app/: __init__.py  acl.py  auth.py  models.py  storage.py  validators.py
apps/backend/app/routes/: namespaces.py
apps/backend/src/app/: __init__.py  acl.py  auth.py  dependencies.py  keycloak_extractor.py  logging.py  main.py  resolver.py  settings.py  slugify.py  storage.py  version_sorter.py  zipvalidator.py
apps/backend/src/app/extractors/: __init__.py  keycloak.py
apps/backend/src/app/routes/: __init__.py  auth.py  disk_usage.py  health.py  internal.py  me.py  namespaces.py  oidc.py  projects.py  refs.py  session.py  versions.py
apps/backend/src/app/schemas/: __init__.py  disk_usage.py  namespace.py  project.py  refs.py  version.py
apps/backend/src/app/services/: __init__.py  upload.py
apps/backend/tests/: README.md  conftest.py  test_acl.py  test_auth_endpoint.py  test_health.py  test_internal_auth.py  test_keycloak_extractor.py  test_logging.py  test_oidc_config.py  test_refs_route.py  test_session_auth.py  test_slugify.py  test_storage.py  test_upload_route.py  test_upload_validation.py  test_version_sorter.py
apps/backend/tests/fixtures/: namespace.toml
apps/frontend/: Dockerfile  env.d.ts  (+5 more)
docs/: README.md  about.md  conf.py  index.rst  requirements.txt
scripts/: gen_dev_token.py
(+55 files in other folders)
