[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docroot-backend"
version = "0.1.0"
description = "FastAPI backend for the documentation host"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pyjwt[crypto]>=2.8",
    "pydantic-settings>=2.0",
    "packaging>=24",
    "httpx>=0.27",
    "gouge>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.9",
]
docs = [
    "sphinx>=8",
    "furo",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "sphinx-copybutton",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
